--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">Payment Card Scanner</string>
-    <string name="scan_card_debug">Scan Card (Debug)</string>
-    <string name="scan_card_alt_text">Scan Card (Alt Text)</string>
+    <string name="app_name">Without Debug</string>
+    <string name="scan_card_debug">With Debug</string>
 </resources>
